--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="home.css">
+    <link rel="canonical" href="https://rajendra939098.github.io/portfolio/index.html">
     
 </head>
 <body style="background-color: #D8DBBD;">
