--- a/index.html
+++ b/index.html
@@ -3,10 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Atla Rajendra</title>
     <link rel="stylesheet" href="home.css">
     <link rel="canonical" href="https://rajendra939098.github.io/portfolio/index.html">
+    <meta name="google-site-verification" content="PXGiCl4F2Dj4ld2MoBpV5rdoo5Pp-qV-H1kobcGvmDE" />
     
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z6KH9QBZ0T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z6KH9QBZ0T');
+</script>
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KNVNV95Q');</script>
+<!-- End Google Tag Manager -->
 </head>
 <body style="background-color: #D8DBBD;">
     <div class="bg-container">
